Correção de erro na ficha 1

--- a/Ficha 01-01-HTML/Ficha 1.html
+++ b/Ficha 01-01-HTML/Ficha 1.html
@@ -16,7 +16,7 @@
         <a href="">Flexbox</a>
         <a href="">Grid</a>
     </nav>
-    <h2 style="color:"> HTML- HyperText Markup Language</h2>
+    <h2> HTML- HyperText Markup Language</h2>
     <p>
         <small>Publicado por <strong>Marco Olim</strong>, 10 de <b>octubro</b>2021</small>
     </p>
