--- a/Ficha 01-01-HTML/Ficha 1.html
+++ b/Ficha 01-01-HTML/Ficha 1.html
@@ -18,7 +18,7 @@
     </nav>
     <h2> HTML- HyperText Markup Language</h2>
     <p>
-        <small>Publicado por <strong>Marco Olim</strong>, 10 de <b>octubro</b>2021</small>
+        <small>Publicado por <strong>Marco Olim</strong>, 10 de <b>outubro</b>2021</small>
     </p>
     <img width="400" height="250" src="/Users/dezav/Desktop/Uni/Semestre 1/Hypermedia/Projeto 1/Projeto 1/img/header.jpg" alt="Programaçao">
 </header>
